--- a/source/stylus/components/card.styl
+++ b/source/stylus/components/card.styl
@@ -201,8 +201,9 @@
   			margin-left: 7%
   			
   			h4 {
+  				margin-top: 2px
 	  			font-size: size-p
-	  			line-height: 18px
+	  			line-height: 16px
 	  		}
   			
   			p {
@@ -218,7 +219,7 @@
   	}
   	
   	.bottom-description {
-  		height: 100px
+  		height: 120px
   	}
   }
 }
