--- a/source/stylus/components/hobbies.styl
+++ b/source/stylus/components/hobbies.styl
@@ -70,7 +70,7 @@
 
 @media (max-width: minimum-width) {
 	.hobbies {
-		height: 1100px
+		height: 1060px
 		margin-top: -10px
 		
 		.hobby {
@@ -78,6 +78,13 @@
 			width: grid(1, 19)
 			max-width: max-grid(1, 19)
 			margin-bottom: 80px
+			
+			.pieces {
+				.text {
+					font-size: size-l
+					line-height: 30px
+				}
+			}
 		}
 	}
 }
