--- a/source/stylus/pages/myself.styl
+++ b/source/stylus/pages/myself.styl
@@ -88,8 +88,11 @@
   }
   
   .personal {
+    margin-top: -44px
+    
     .box {
-      margin-top: -120px
+      margin-top: -120px !important
+      height: calc(100% + 120px) !important
     }
   }
   
@@ -127,7 +130,7 @@
   .personal {
     .box {
       margin-top: -100px !important
-      height: calc(100% + 100px)
+      height: calc(100% + 100px) !important
     }
   }
 }
